--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Dextrous Design Engineering</title>
+        <title>Dextrous Design Engineering | Web Policies</title>
         <meta name="description" content="Physical product design, engineering and manufacturing">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -14,8 +14,9 @@
         <link rel="stylesheet" href="css/dde-main.css">
         <link rel="stylesheet" href="css/owl-carousel.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800" rel="stylesheet">
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         
     </head>
 
@@ -49,7 +50,24 @@
         });
     </script>
 
+<header>
+    <div id="header"></div>
+</header>
+
 <body>
+        <!-- Side Navigation -->
+        <div class="fixed-side-navbar">
+                <ul class="nav flex-column">
+                    <!-- <li class="nav-item"><a class="nav-link" href="#home"><span>Intro</span></a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="#services"><span>Services</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio"><span>Portfolio</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#processes"><span>Processes</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#WhyChooseUs"><span>Why Choose Us</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#WithWhom"><span>Clients</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact-us"><span>Contact Us</span></a></li>
+                </ul>
+        </div>
+
         <div class="projects-content" id="Confidentiality">  
                 <div class="container">
                     <div class="left-text">
