--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     <img src="img/medtr0nic-vector-logo.png" alt="3" class="img-responsive" />
                 </div>
                 <div class="flex-item">
-                    <a href="https://www.quspin.com" rel="nofollow noopener noreferrer"><img src="img/Quspin-logo.png" alt="4" class="img-responsive"/></a>
+                    <a href="https://www.quspin.com" rel="nofollow noopener noreferrer"><img src="img/Qusp1n-logo.png" alt="4" class="img-responsive"/></a>
                 </div>
                 <div class="flex-item">
                         <a href="https://breakthrough.photography" rel="nofollow noopener noreferrer"><img src="img/Breakthrough-Logo.png" alt="5"class="img-responsive" /></a>
