--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800" rel="stylesheet">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script>
+            window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
+        </script>
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/plugins.js"></script>
@@ -143,7 +145,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="left-text">
-                        <h4>What Do We Do?</h4>
+                        <h4>What do we do?</h4>
                         <div class="line-dec"></div>
                         
                         <div class="service-item">
@@ -188,7 +190,7 @@
                         <div class="col-md-6">
                             <div class="service-item">
                                 <a href="pricing.html#serviceofferings">                                    
-                                    <h4>Full Service Menu</h4>
+                                    <h4>Service Menu</h4>
                                 </a>
                                 <div class="line-dec"></div>
                                 <p>
@@ -319,7 +321,7 @@
         <div class="container">
             <div class="row">
                     <div class="left-text">
-                            <h4>Processes and Prototyping Capabilities</h4>
+                            <h4>Processes and prototyping capabilities</h4>
                             <div class="line-dec"></div>
                         </div>
             </div>
@@ -412,7 +414,7 @@
     <div class="WCU-feature" id="WhyChooseUs">
         <div class="container">
             <div class="left-text">
-                <h4>Why Choose Us?</h4>
+                <h4>Why choose us?</h4>
                 <div class="line-dec"></div>
                 <p>
                 We have been honored to work with many companies over the years to overcome unique product challenges for their ultimate success. We are passionate about what we do and enjoy building new partnerships. Below are four reasons why clients continue to work with us. To learn more about how we operate, please take a look at our Mission Statement.
@@ -558,7 +560,7 @@
 
                                             <div class="col-md-10">
                                                 <p>
-                                                Carl has worked in full value chain of product development from R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. He has designed a handful of products that became successful on the market, which were the results of many people working together. Carl is the inventor on two patents. He graduated from UCLA with an advanced engineering degree. His favorite activities are building things, all things motorcycles and sharing good stories.                                                 
+                                                Carl has worked in the full value chain of product development from R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. He has designed a handful of products that became successful on the market, which were the results of many people working together. Carl is the inventor on two patents. He graduated from UCLA with an advanced engineering degree. His favorite activities are building things, all things motorcycles and sharing good stories.                                                 
                                                 </p>
                                                 <li><a href="https://www.linkedin.com/in/shaobocarlzhou"><i class="fa fa-linkedin"></i></a></li>
 
