--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 </a>
                                 <div class="line-dec"></div>
                                 <p>
-                                    Whether or not we designed your product, we prepare patent documentations and work with a patent agent or attorney for your patent filings. 
+                                    Whether or not we designed your product, we help prepare patent documentations and work with a patent practitioner for your patent filings. 
                                 </p>
                             </div>
                         </div>
