--- a/pricing.html
+++ b/pricing.html
@@ -260,14 +260,14 @@
                             <h4>Intellectual properties protection</h4>
                             <div class="line-dec"></div>
                             <h6>
-                                <p>Pricing: Provisional patent application: $996; Non-provisional patent application: starting at 8,996</p>
+                                <p></p>
                             </h6>
                         </div>
 
                         <div class="left-text">
                             <ul>
                                 <li>
-                                We offer competitive pricing on US patent filings for both provisional and non-provisional utility patents. Because language consistency between the provisional and non-provisional patents allows the non-provisional patent to use the provisional patent’s filing date, we advise our clients to consult with us on all of their filings. Our experienced attorney and agent can assist you wherever you are on this journey.
+                                While we do not offer US patent filing services in house. We have working relationships with skilled patent practitioners on filing patents for inventions. Because language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if they think intellectual properties protection is important for their invention.
                                 </li>
                             </br>
                             </ul>
