--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -267,7 +267,7 @@
                         <div class="left-text">
                             <ul>
                                 <li>
-                                While we do not offer US patent filing services in house. We have working relationships with skilled patent practitioners on filing patents for inventions. Because language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if they think intellectual properties protection is important for their invention.
+                                While we do not offer patent filing services in house, we work with skilled, outside patent practitioners who file, prosecute patents and represent our clients. Because the language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if intellectual properties protection is important for their invention.
                                 </li>
                             </br>
                             </ul>
