--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 </a>
                                 <div class="line-dec"></div>
                                 <p>
-                                    Whether or not we designed your product, we help prepare patent documentations and work with outside patent practitioners who represent our clients for patent filings. 
+                                    Whether or not we designed your product, we work with outside patent practitioners who represent our clients with patent documentations.  
                                 </p>
                             </div>
                         </div>
