--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 
                 <!-- <div style="text-align:right"> -->
                     <address>
-                        3614 Dexter St. Denver CO 80207 </br>
+                        801 Minnesota St. Suite 12. San Francisco, CA 94107 </br>
                         ‪(628) 215-1605‬</br>
                         dextrousde@gmail.com</br>
                     </address>
@@ -201,11 +201,11 @@
                         <div class="col-md-6">
                             <div class="service-item">
                                 <a href="pricing.html#ipprotection">                                    
-                                    <h4>Patent Documentation</h4>
+                                    <h4>Patents</h4>
                                 </a>
                                 <div class="line-dec"></div>
                                 <p>
-                                    Whether or not we designed your product, we work with outside patent practitioners who represent our clients with patent documentations.  
+                                    Whether or not we designed your product, Dex has a registered US patent agent who can handle patent filings and represent clients in patent proceedings at the USPTO.  
                                 </p>
                             </div>
                         </div>
@@ -560,7 +560,7 @@
 
                                             <div class="col-md-10">
                                                 <p>
-                                                Carl has worked in the full value chain of product development from R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. He has designed a handful of products that became successful on the market, which were the results of many people working together. Carl is the inventor on two patents. He graduated from UCLA with an advanced engineering degree. His favorite activities are building things, all things motorcycles and sharing good stories.                                                 
+                                                Carl has worked in the full value chain of product development in R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. He has designed a handful of succesful products on the market, which were the results of many people working together. Carl is the inventor on two patents. He graduated from UCLA with an advanced engineering degree. He is a registered US patent agent. His favorite activities are building things, all things motorcycles and sharing good stories.                                                 
                                                 </p>
                                                 <li><a href="https://www.linkedin.com/in/shaobocarlzhou"><i class="fa fa-linkedin"></i></a></li>
 
