--- a/pricing.html
+++ b/pricing.html
@@ -257,7 +257,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="left-text">
-                            <h4>Intellectual properties protection</h4>
+                            <h4>Patent Filings and Proceedings</h4>
                             <div class="line-dec"></div>
                             <h6>
                                 <p></p>
@@ -267,7 +267,7 @@
                         <div class="left-text">
                             <ul>
                                 <li>
-                                While we do not offer patent filing services in house, we work with skilled, outside patent practitioners who file, prosecute patents and represent our clients. Because the language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if intellectual properties protection is important for their invention.
+                                Shao Bo (Carl) Zhou is a registered patent agent, who files, prosecutes patents and represents clients in patent proceedings before the USPTO. Because the language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if intellectual properties protection is important for their invention.
                                 </li>
                             </br>
                             </ul>
