--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
                                             <div class="col-md-10">
                                                 <p>
-                                                Carl has worked in the full value chain of product development in R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. He has designed a handful of succesful products on the market, which were the results of many people working together. Carl is the inventor on two patents. He graduated from UCLA with an advanced engineering degree. He is a registered US patent agent. His favorite activities are building things, all things motorcycles and sharing good stories.                                                 
+                                                I have worked in the full value chain of product development in R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. I have designed a handful of succesful products on the market, which were the results of many people working together. I graduated from UCLA with an advanced engineering degree. I am the inventor on two patents and am a registered US patent agent (Shao Bo Zhou). My favorite activities are building things, all things motorcycles and sharing good stories.                                                 
                                                 </p>
                                                 <li><a href="https://www.linkedin.com/in/shaobocarlzhou"><i class="fa fa-linkedin"></i></a></li>
 
