--- a/support-pages/footer.html
+++ b/support-pages/footer.html
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="" data-remote="contactus.html" data-toggle="modal" data-target="#contactusmodal">Contact Us</a>
                 </div>
                 <p>
-                    3614 Dexter St. Denver CO 80207 </br>
+                    801 Minnesota St. Ste 12  San Francisco CA 94107 </br>
                     ‪(628) 215-1605‬</br>
                     <a href="mailto:dextrousde@gmail.com">dextrousde@gmail.com</a></br>
                 </p>   
