--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
                 
                 <!-- <div style="text-align:right"> -->
                     <address>
-                        801 Minnesota St. Suite 12. San Francisco, CA 94107 </br>
-                        M-F 9AM - 7PM </br>
+                        M-F 9AM - 7PM PT </br>
                         ‪(628) 215-1605 ‬</br>
                         dextrousde@gmail.com</br>
                     </address>
@@ -469,7 +468,7 @@
                             <div class="testimonials-item">                        
                                 <div class="text-content">
                                     <p>
-                                        Very well customer service oriented and resourceful in finding solutions, [Carl] shows very good judgment in designs, understanding of our products and usage out in the field and is always looking to make improvements, anticipates problems and solves them before they develop. He works very well with us and all departments in-house: assembly, manufacturing etc. Very good results of mechanical design work he did on our cameras.
+                                        Very well customer service oriented and resourceful in finding solutions, [Dex] shows very good judgment in designs, understanding of our products and usage out in the field and is always looking to make improvements, anticipates problems and solves them before they develop. Very good results of mechanical design work on our cameras.
                                     </p>
                                     <h4>John Rodriguez</h4>
                                     <span>Panavision</span>
@@ -541,8 +540,8 @@
                             <div class="container" id=Personnel>
                                 <p>
                                     Established in 2017 on Dexter Street in Denver CO, Dextrous Design Engineering was formed to bring the highest quality engineering and efficiency on the market to product businesses big and small.
-                                    <a data-toggle="collapse" href="#CarlZ" role="button" aria-expanded="false" aria-controls="CarlZ">
-                                        Carl Zhou
+                                    <a data-toggle="collapse" href="#ShaoBoZ" role="button" aria-expanded="false" aria-controls="ShaoBoZ">
+                                        Shao Bo Zhou
                                     </a>
                                      is our head of engineering. 
 
@@ -551,7 +550,7 @@
                                     </a> -->
                                 </p>
                             
-                                <div class="collapse" id="CarlZ" data-parent="#Personnel">
+                                <div class="collapse" id="ShaoBoZ" data-parent="#Personnel">
                                     <div class="card card-body">
                                         <div class="row">
                                             <div class="col d-flex align-items-center justify-content-center">
@@ -563,7 +562,7 @@
                                                 <p>
                                                 I have worked in the full value chain of product development in R&D, operations, manufacturing and intellectual property protection at small, medium and Fortune 500 companies. I have designed a handful of succesful products on the market, which were the results of many people working together. I graduated from UCLA with an advanced engineering degree. I am the inventor on two patents and am a registered US patent agent (Shao Bo Zhou). My favorite activities are building things, all things motorcycles and sharing good stories.                                                 
                                                 </p>
-                                                <li><a href="https://www.linkedin.com/in/shaobocarlzhou"><i class="fa fa-linkedin"></i></a></li>
+                                                <li><a href="https://www.linkedin.com/in/shaobozhou"><i class="fa fa-linkedin"></i></a></li>
 
                                             </div>                      
                                         </div>
