--- a/pricing.html
+++ b/pricing.html
@@ -267,7 +267,7 @@
                         <div class="left-text">
                             <ul>
                                 <li>
-                                Shao Bo (Carl) Zhou is a registered patent agent, who files, prosecutes patents and represents clients in patent proceedings before the USPTO. Because the language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if intellectual properties protection is important for their invention.
+                                Shao Bo Zhou is a registered patent agent, who files, prosecutes patents and represents clients in patent proceedings before the USPTO. Because the language used and timing are critical in any patent application, we advise our clients to consider patenting process as soon as possible if intellectual properties protection is important for their invention.
                                 </li>
                             </br>
                             </ul>
