--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="service-item">
                         <ul>
                             <li>
-                                We help clients bring physical product concepts to reality. We offer 4 service categories in product fields including <span style="color:#3d81e1">internet of things (IoT), consumer products, scientific devices, health &amp; medical devices, automotive parts &amp; accessories, electric vehicles &amps e-mobility products and toys. </span>
+                                We help clients bring physical product concepts to reality. We offer 4 service categories in product fields including <span style="color:#3d81e1">internet of things (IoT), consumer electronics, scientific devices, health &amp; medical devices, automotive parts, accessories, electric vehicles &amps e-mobility products and toys. </span>
                                 </br></br>Explore each category to learn more about pricing.                         
                             </li>
                         </ul>
@@ -233,7 +233,7 @@
                                 <a href="img/mug-big.jpg" data-lightbox="image-1" data-title="Dex proud to provide product engineering for the Dual Cup Vacuum Flask, which can hold a hot and a cold (or a chaser and a strong) liquid at the same time."><img src="img/Mug.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Dual Cup Vacuum Flask</h4>
-                                    <span>Consumer</span>
+                                    <span>Consumer Products</span>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                 <a href="img/clock-big.jpg" data-lightbox="image-1" data-title="Inspired by old-school Mustang speedometer looks, this smart clock uses BLE to customize its settings."><img src="img/clock.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Mustang-inspired Smart Clock</h4>
-                                    <span>Internet of Things</span>
+                                    <span>Consumer Electronics</span>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                                 <a href="img/Cufflinks-big.jpg" data-lightbox="image-1" data-title="Customized, raised letter, monogram or logo on square cufflink with anti-rotational neck, cast in precious metals with 3D printed molds, designed and made for a jeweler."><img src="img/Cufflinks.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Raised Letter Cufflinks with Anti-Rotation</h4>
-                                    <span>Consumer</span>
+                                    <span>Accessories</span>
                                 </div>
                             </div>
                         </div>
