--- a/support-pages/footer.html
+++ b/support-pages/footer.html
@@ -59,9 +59,9 @@
                     <a class="nav-link" href="" data-remote="contactus.html" data-toggle="modal" data-target="#contactusmodal">Contact Us</a>
                 </div>
                 <p>
-                    801 Minnesota St. Ste 12  San Francisco CA 94107 </br>
-                    M-F 9AM - 7PM </br>
-                    ‪(628) 215-1605‬</br>
+                    <!--801 Minnesota St. Ste 12  San Francisco CA 94107 </br>--> 
+                    M-F 9AM - 7PM Pacific Time</br>
+                    ‪+1 (628) 215-1605‬</br>
                     <a href="mailto:dextrousde@gmail.com">dextrousde@gmail.com</a></br>
                 </p>   
             </div>
