--- a/support-pages/footer.html
+++ b/support-pages/footer.html
@@ -45,11 +45,11 @@
             </div>
 
             <div class="boxed col-xs-6 col-sm-6 col-md-3">
-                <p>CAREER</p>
+                <!--<p>CAREER</p>
                 <div class="line-dec"></div>
                 <p>
                     <a href="mailto:dextrousde@gmail.com">We are always looking </br> for great people. </br> Send us your resume.</a></br>                    
-                </p>   
+                </p> -->   
             </div>
 
             <div class="boxed col-xs-6 col-sm-6 col-md-3">
