--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 
                 <!-- <div style="text-align:right"> -->
                     <address>
-                        M-F 9AM - 7PM PT </br>
+                        M-F 9AM - 5PM Pacific Time </br>
                         ‪(628) 215-1605 ‬</br>
                         dextrousde@gmail.com</br>
                     </address>
@@ -323,7 +323,7 @@
                     <div class="left-text">
                             <h4>Processes and prototyping capabilities</h4>
                             <div class="line-dec"></div>
-                        </div>
+                    </div>
             </div>
             <div class="row">                  
                 <div class="col-md-8 mx-auto">
@@ -369,43 +369,53 @@
     </div>
 
 
-    <!-- Affiliated Products -->
-    <div class="flex-container" id="Affiliatedproducts">
-        <div class="flex-item">
-            <img src="img/s0lidw0rks-logo.png"/>
+    <!-- Tools We've Used -->
+    <div class="projects-content" id="ToolsWeveUsed">
+        <div class="container">
+            <div class="left-text">
+                <h4>Tools we've used*</h4>
+                <div class="line-dec"></div>
+                <p>*We are not endorsed, sponsored by or affiliated with brands whose products we have or had used before, including</br></p>
+            </div>
         </div>
-        <div class="flex-item">
-            <img src="img/diptr8ce-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/x0m-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/Tev0-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/PRL8-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/V5-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/fusi0n-logo.png" />
-        </div>
-        <div class="flex-item">
-            <img src="img/3dsyst3ms-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/F0rmlabs-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/cre0-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/8nsys-logo.png"/>
-        </div>
-        <div class="flex-item">
-            <img src="img/0rcad-logo.png"/>
+
+        <div class="flex-container">
+            <div class="flex-item">
+                <img src="img/s0lidw0rks-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/diptr8ce-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/x0m-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/Tev0-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/PRL8-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/V5-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/fusi0n-logo.png" />
+            </div>
+            <div class="flex-item">
+                <img src="img/3dsyst3ms-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/F0rmlabs-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/cre0-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/8nsys-logo.png"/>
+            </div>
+            <div class="flex-item">
+                <img src="img/0rcad-logo.png"/>
+            </div>
         </div>
     </div>
 
@@ -490,15 +500,15 @@
                 </div>
             </div>
         </div>
-        
     </div>
 
     <!-- With Whom Have We Worked? -->
     <div class="projects-content" id="WithWhom">
         <div class="container">
                 <div class="left-text">
-                        <h4>With whom have we worked?</h4>
+                        <h4>With whom have we worked?**</h4>
                         <div class="line-dec"></div>
+                        <p>**We are not endorsed, sponsored by or affiliated with the companies we currently or formerly work with, including</br></p>
                     </div>
         </div>
 
@@ -513,12 +523,14 @@
                     <img src="img/medtr0nic-vector-logo.png" alt="3" class="img-responsive" />
                 </div>
                 <div class="flex-item">
-                    <a href="https://www.quspin.com" rel="nofollow noopener noreferrer"><img src="img/Qusp1n-logo.png" alt="4" class="img-responsive"/></a>
+                    <!--<a href="https://www.quspin.com" rel="nofollow noopener noreferrer">-->
+                        <img src="img/Qusp1n-logo.png" alt="4" class="img-responsive"/>
+                    <!--</a>-->
                 </div>
                 <div class="flex-item">
-                        <!-- <a href="https://breakthrough.photography" rel="nofollow noopener noreferrer"> -->
-                            <img src="img/Breakthrough-Logo.png" alt="5"class="img-responsive" />
-                        <!-- </a> -->
+                    <!-- <a href="https://breakthrough.photography" rel="nofollow noopener noreferrer"> -->
+                        <img src="img/Breakthrough-Logo.png" alt="5"class="img-responsive" />
+                    <!-- </a> -->
                 </div>
             </div>
         </div>
